--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "bignumber.js": "^9.0.0",
     "rc-resize-observer": "^1.0.0",
     "rc-virtual-list": "^3.0.0"
@@ -46,7 +47,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "antd": "^4.0.0",
+    "antd": "^4.24.16",
     "babel-plugin-import": "^1.13.8",
     "dumi": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
