--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "bignumber.js": "^9.0.0",
     "rc-resize-observer": "^1.0.0",
     "rc-virtual-list": "^3.0.0"
