--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "bignumber.js": "^9.0.0",
+    "immer": "^10.1.1",
     "rc-resize-observer": "^1.0.0",
-    "rc-virtual-list": "^3.0.0"
+    "rc-virtual-list": "^3.0.0",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
