build: 更新 tsconfig.json 模块配置
- 将 "module" 选项从 "ESNext" 修改为 "NodeNext"
- 将 "moduleResolution" 选项从 "node" 修改为 "nodeNext"

这些更改旨在提高项目的兼容性和性能

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "nodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
