build: 更新 package.json 中的作者信息
- 将 "author" 字段的值从 "Your Name" 修改为 "LiShaoZhe"

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "金融数据",
     "虚拟表格"
   ],
-  "author": "Your Name",
+  "author": "LiShaoZhe",
   "license": "MIT",
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
