--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^4.0.0",
