build: 更新 TypeScript 配置以支持 Node 16 模块解析
- 将 tsconfig.json 中的 module 设置为 Node16
- 将 moduleResolution 设置为 node16
- 添加 tsconfig.node.json 配置文件，用于 Vite 配置
- 从 tsconfig.json 中移除 vite.config.ts 的包含

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "Node16",
+    "moduleResolution": "node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
@@ -26,13 +26,13 @@
     "paths": {
       "agglo-tree-table": ["src"],
       "agglo-tree-table/*": ["src/*"]
-    }
+    },
+    "ignoreDeprecations": "6.0"
   },
   "include": [
     "src",
     "examples",
-    ".dumirc.ts",
-    "vite.config.ts"
+    ".dumirc.ts"
   ],
   "exclude": [
     "node_modules",
