--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agglo-tree-table",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A React tree table component with aggregation capabilities for financial data | 一个支持金融数据聚合功能的 React 树形表格组件",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -15,7 +15,8 @@
     "test": "jest",
     "docs": "typedoc --out docs src",
     "docs:dev": "dumi dev",
-    "docs:build": "dumi build"
+    "docs:build": "dumi build",
+    "build:webpack": "webpack --config webpack.config.js"
   },
   "keywords": [
     "react",
@@ -55,11 +56,16 @@
     "@vitejs/plugin-react": "^4.0.0",
     "antd": "^4.24.16",
     "babel-plugin-import": "^1.13.8",
+    "css-loader": "^7.1.2",
     "dumi": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.4",
     "typedoc": "^0.22.0",
     "typescript": "^4.5.0",
     "vite": "^4.0.0",
-    "vite-plugin-dts": "^3.0.0"
+    "vite-plugin-dts": "^3.0.0",
+    "webpack": "^5.101.1",
+    "webpack-cli": "^4.10.0"
   }
 }
