--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agglo-tree-table",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A React tree table component with aggregation capabilities for financial data | 一个支持金融数据聚合功能的 React 树形表格组件",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -16,7 +16,7 @@
     "docs": "typedoc --out docs src",
     "docs:dev": "dumi dev",
     "docs:build": "dumi build",
-    "build:webpack": "webpack --config webpack.config.js"
+    "build:webpack": "webpack --mode production --config webpack.config.js"
   },
   "keywords": [
     "react",
